Fixed mobile layout breaked in second section

--- a/static/css/cssvr.css
+++ b/static/css/cssvr.css
@@ -483,14 +483,12 @@ margin-top:60px;
         margin: 60px 20px 0;
         display: flex;
         flex-direction: column;
-        border: 1px solid red;
     }
 
     .subscription {
         margin: 60px 20px 60px;
-        display: grid;
-        grid-template-columns: 1fr;
-        grid-column-gap: 50px;
+        display: flex;
+        flex-direction: column;
     }
 
     .subOptions {
